--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
                 <li class="header-menu-link"><a href="/index.html">Скидки</a></li>
             </ul>
             <div class="auth">
-                <a href="/index.html"><img src="/User Profile Circle.png" width="40px"  alt=""></a>
+                <a href="/index.html"><img src="./icons/User Profile Circle.png" width="40px"  alt=""></a>
             </div>
         </div>
         
         <div class="header-menu-middle">
             <a href="./index.html" class="header-logo">
-                <img src="/лого.png" alt="logo" loading="lazy">
+                <img src="./images/лого.png" alt="logo" loading="lazy">
             </a>
 
             <input type="text" placeholder="Поиск на сайте">
 
             <div class="call">
                 <div class="phone">
-                    <img src="/Звонок (Stroke).png" alt="">
+                    <img src="./icons/Звонок (Stroke).png" alt="">
                     <div class="text">
                         <p>Связаться с нами +7 (343) 319-17-25</p>
                     </div>
@@ -46,10 +46,10 @@
             <button class="button" type="button">Заказать звонок</button>
 
             <div class="auth">
-                <a href="/index.html"><img src="/Eye Open.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="/Icon.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="/heart.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="/bag.png" width="40px"  alt=""></a>
+                <a href="/index.html"><img src="./icons/Eye Open.png" width="40px"  alt=""></a>
+                <a href="/index.html"><img src="./icons/Icon.png" width="40px"  alt=""></a>
+                <a href="/index.html"><img src="./icons/heart.png" width="40px"  alt=""></a>
+                <a href="/index.html"><img src="./icons/bag.png" width="40px"  alt=""></a>
             </div>
         </div>
 
@@ -91,7 +91,7 @@
                     <input type="radio" name="s" id="s5">
 
                     <div class="item s1">
-                        <img src="/slide.jpg" alt="">
+                        <img src="./images/slide.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -99,17 +99,17 @@
 
         <div class="advantages">
             <div class="frame">
-                <img src="/пикча.png" alt="">
+                <img src="./images/пикча.png" alt="">
                 <p class="title">Доставка по России</p>
                 <p class="description">Мы доставим ваш заказ курьером по Москве и Петербургу или службой экспресс-доставки по всей России</p>
             </div>
             <div class="frame">
-                <img src="/пикча.png" alt="">
+                <img src="./images/пикча.png" alt="">
                 <p class="title">Оплата онлайн</p>
                 <p class="description">Оплатите заказ банковской картой, наличными в ближайшем платежном терминале или наличными</p>
             </div>
             <div class="frame">
-                <img src="/пикча.png" alt="">
+                <img src="./images/пикча.png" alt="">
                 <p class="title">8 лет</p>
                 <p class="description">Радуем своих клиентов высоким уровнем качества продукции и доступными ценами</p>
             </div>
