--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Красота ТУТ!</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
 
         <div class="header-menu-top">
             <ul class="header-menu-list-top">
-                <li class="header-menu-link"><a href="/index.html">О нас</a></li>
-                <li class="header-menu-link"><a href="/index.html">Блог</a></li>
-                <li class="header-menu-link"><a href="/index.html">Отзывы о магазине</a></li>
-                <li class="header-menu-link"><a href="/index.html">Доставка/оплата</a></li>
-                <li class="header-menu-link"><a href="/index.html">Часто задаваемые вопросы</a></li>
-                <li class="header-menu-link"><a href="/index.html">Контакты</a></li>
-                <li class="header-menu-link"><a href="/index.html">Скидки</a></li>
+                <li class="header-menu-link"><a href="./index.html">О нас</a></li>
+                <li class="header-menu-link"><a href="./index.html">Блог</a></li>
+                <li class="header-menu-link"><a href="./index.html">Отзывы о магазине</a></li>
+                <li class="header-menu-link"><a href="./index.html">Доставка/оплата</a></li>
+                <li class="header-menu-link"><a href="./index.html">Часто задаваемые вопросы</a></li>
+                <li class="header-menu-link"><a href="./index.html">Контакты</a></li>
+                <li class="header-menu-link"><a href="./index.html">Скидки</a></li>
             </ul>
             <div class="auth">
-                <a href="/index.html"><img src="./icons/User Profile Circle.png" width="40px"  alt=""></a>
+                <a href="./index.html"><img src="./icons/User Profile Circle.png" width="40px"  alt=""></a>
             </div>
         </div>
         
@@ -46,10 +46,10 @@
             <button class="button" type="button">Заказать звонок</button>
 
             <div class="auth">
-                <a href="/index.html"><img src="./icons/Eye Open.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="./icons/Icon.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="./icons/heart.png" width="40px"  alt=""></a>
-                <a href="/index.html"><img src="./icons/bag.png" width="40px"  alt=""></a>
+                <a href="./index.html"><img src="./icons/Eye Open.png" width="40px"  alt=""></a>
+                <a href="./index.html"><img src="./icons/Icon.png" width="40px"  alt=""></a>
+                <a href="./index.html"><img src="./icons/heart.png" width="40px"  alt=""></a>
+                <a href="./index.html"><img src="./icons/bag.png" width="40px"  alt=""></a>
             </div>
         </div>
 
@@ -57,16 +57,16 @@
 
         <div class="catalog">
             <ul class="catalog-list">
-                <li class="catalog-link"><a href="/index.html">Мезороллеры</a></li>
-                <li class="catalog-link"><a href="/index.html">Пластыри</a></li>
-                <li class="catalog-link"><a href="/index.html">Косметика</a></li>
-                <li class="catalog-link"><a href="/index.html">Профессиональная косметика</a></li>
-                <li class="catalog-link"><a href="/index.html">Гигиена</a></li>
-                <li class="catalog-link"><a href="/index.html">Здоровье</a></li>
-                <li class="catalog-link"><a href="/index.html">Парфюмерия</a></li>
-                <li class="catalog-link"><a href="/index.html">Дом</a></li>
-                <li class="catalog-link"><a href="/index.html">Спорт</a></li>
-                <li class="catalog-link"><a href="/index.html">Для детей</a></li>
+                <li class="catalog-link"><a href="./index.html">Мезороллеры</a></li>
+                <li class="catalog-link"><a href="./index.html">Пластыри</a></li>
+                <li class="catalog-link"><a href="./index.html">Косметика</a></li>
+                <li class="catalog-link"><a href="./index.html">Профессиональная косметика</a></li>
+                <li class="catalog-link"><a href="./index.html">Гигиена</a></li>
+                <li class="catalog-link"><a href="./index.html">Здоровье</a></li>
+                <li class="catalog-link"><a href="./index.html">Парфюмерия</a></li>
+                <li class="catalog-link"><a href="./index.html">Дом</a></li>
+                <li class="catalog-link"><a href="./index.html">Спорт</a></li>
+                <li class="catalog-link"><a href="./index.html">Для детей</a></li>
             </ul>
         </div>
     </header>
